[package]
name = "chatgpt-cli"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4", features = ["derive", "std"] }
curl = { git = "https://github.com/morn-0/curl-rust", branch = "curl-sys-0.4.63", features = [
    "http2",
    "impersonate-ff",
], default-features = false }
anyhow = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
log = "0.4"
regex = "1"
base64 = "0.21"
rand = "0.8"
time = { version = "0.3", features = ["formatting", "parsing"] }
percent-encoding = "2"
aes = "0.8"
md5 = "0.7"
cbc = "0.1"
reqwest = { version = "0.11", features = [
    "gzip",
    "deflate",
    "brotli",
    "json",
    "rustls-tls-webpki-roots",
    "blocking",
    "cookies",
], default-features = false }
uuid = { version = "1", features = ["v4", "fast-rng"] }

[profile.release]
lto = true
codegen-units = 1
strip = true
opt-level = 'z'
panic = 'abort'
